--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ client/node_modules/
 
 # Server / Backend
 server/node_modules/
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
