--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,8 @@
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^8.0.1",
+    "pdfkit": "^0.17.2",
+    "qs": "^6.14.2",
     "stripe": "^20.3.1",
     "xss": "^1.0.15",
     "zod": "^4.3.6"
